Fix flickering tooltips in Chrome when the tip container overlaps the triggering element
Summary:
Fixes T8440. See that task for discussion.

Ref T13216. See PHI976.

Test Plan:
In Chrome, hovered a timestamp and moved the mouse up to the "overlap" area (see T8440). Before: flickered like crazy. After: no flickering.

(I couldn't reproduce the original issue in modern Firefox or Safari.)

Reviewers: amckinley, avivey

Reviewed By: avivey

Maniphest Tasks: T8440, T13216

Differential Revision: https://secure.phabricator.com/D19808

--- a/webroot/rsrc/css/aphront/tooltip.css
+++ b/webroot/rsrc/css/aphront/tooltip.css
@@ -5,6 +5,12 @@
 .jx-tooltip-container {
   position: absolute;
   padding: 5px;
+
+  /* In Chrome, moving the cursor into the empty space next to the "caret" on
+     the caret side of the tooltip can cause the tooltip to flicker rapidly
+     because the cursor hits the container. To stop this, prevent cursor
+     events on the container. See T8440. */
+  pointer-events: none;
 }
 
 .jx-tooltip-appear {
